--- a/app/views/layouts/application_revised.html.haml
+++ b/app/views/layouts/application_revised.html.haml
@@ -91,7 +91,7 @@
             &#9776;
         %ul.primary-main-menu
           %li.primary-nav-item.d-lg-none
-            = link_to t(".search_bikes"), default_bike_search_path, class: 'nav-link', id: 'search_bikes_header_link'
+            = link_to t(".search_bikes"), default_bike_search_path, class: 'nav-link defaultBikeSearchLink', id: 'search_bikes_header_link'
           %li.divider-nav-item.d-lg-none
           - if current_user_or_unconfirmed_user.present?
             %li.primary-nav-item
@@ -132,7 +132,7 @@
           %li.primary-nav-item
             = active_link t(".blog"), news_index_path, class: 'nav-link', match_controller: true
           %li.primary-nav-item.d-none.d-lg-block
-            = active_link t(".search_bikes"), default_bike_search_path, class: 'nav-link', id: 'search_bikes_header_link', match_controller: true
+            = active_link t(".search_bikes"), default_bike_search_path, class: 'nav-link defaultBikeSearchLink', match_controller: true
     = render 'layouts/revised_messages'
 
     - if current_page_skeleton
