--- a/app/views/admin/feedbacks/index.html.haml
+++ b/app/views/admin/feedbacks/index.html.haml
@@ -56,7 +56,8 @@
               = l feedback.created_at, format: :convert_time
           %td
             - if feedback.user_id.present?
-              = link_to feedback.user.display_name, admin_user_path(feedback.user)
+              - display_name = feedback.user&.display_name || feedback.user_id
+              = link_to display_name, admin_user_path(feedback.user)
               - unless params[:search_user_id].present?
                 %small
                   = link_to "matching messages", admin_feedbacks_path(sortable_search_params.merge(search_user_id: feedback.user_id)), class: "gray-link"
