--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -82,7 +82,7 @@
                 %tr
                   %td Claimed
                   %td
-                    = @bike.claimed?
+                    = "&#x2713;".html_safe if @bike.claimed?
                 %tr
                   %td Creator
                   %td
